# path-comment-hook

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  POA.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  setup-dev.sh  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  security.yml  test.yml  update-version.yml
docs/: changelog.md  faq.md  index.md  troubleshooting.md
docs/advanced/: ci-integration.md  custom-formats.md  monorepos.md  performance.md
docs/api/: reference.md
docs/contributing/: architecture.md  development.md  testing.md
docs/getting-started/: installation.md  quick-start.md  why-path-headers.md
docs/user-guide/: cli-usage.md  configuration.md  examples.md  file-types.md  pre-commit-setup.md
examples/: basic_usage.py  example_config.toml
examples/before_after/: after_sample.py  before_sample.py
scripts/: docs-dev.sh  update-changelog.py
site/: 404.html  index.html  sitemap.xml
site/advanced/ci-integration/: index.html
site/advanced/custom-formats/: index.html
site/advanced/monorepos/: index.html
site/advanced/performance/: index.html
site/api/reference/: index.html
site/changelog/: index.html
site/contributing/architecture/: index.html
site/faq/: index.html
site/search/: search_index.json
site/troubleshooting/: index.html
src/path_comment/: __about__.py  cli.py  config.py  detectors.py  file_handler.py  injector.py  processor.py  welcome.py
tests/: test_cli.py  test_config.py  test_detectors.py  test_file_handling.py  test_injector.py  test_multiprocessing.py  test_processor.py
tests/integration/: test_full_workflow.py  test_pre_commit_hook.py
(+12 files in other folders)
