[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "path-comment"
dynamic = ["version"]
description = "Pre-commit hook that injects relative-path comments"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Shorzinator", email = "shorz2905@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.scripts]
path-comment = "path_comment.cli:main"

[project.urls]
Documentation = "https://github.com/Shorzinator/src/path-comment#readme"
Issues = "https://github.com/Shorzinator/src/path-comment/issues"
Source = "https://github.com/Shorzinator/src/path-comment"

[tool.hatch.version]
path = "src/path_comment/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/src/path_comment tests}"

[tool.coverage.run]
source_pkgs = ["src/path_comment", "tests"]
branch = true
parallel = true
omit = [
  "src/src/path_comment/__about__.py",
]

[tool.coverage.paths]
"src/path_comment" = ["src/src/path_comment", "*/src/path-comment/src/src/path_comment"]
"tests" = ["tests", "*/src/path-comment/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
